# library_reverse_reference

./: CMakeLists.txt  README.md  main.c
lib_a/: CMakeLists.txt  lib_a.c  lib_a.h
lib_b/: CMakeLists.txt  lib_b.c  lib_b.h
